confusion matrix function done

--- a/Assignment 2/Assignment_2.ipynb
+++ b/Assignment 2/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "from pprint import pprint\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score,confusion_matrix\n",
     "from os import listdir\n",
     "import itertools\n",
     "from PIL import Image\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,6 +407,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_confusion_matrix(true_labels,pred_labels):\n",
+    "    number_of_classes = len(np.unique(true_labels))\n",
+    "    confusion_matrix = np.zeros([number_of_classes,number_of_classes],dtype=int)\n",
+    "    for i in range(number_of_classes):\n",
+    "        index_of_class = np.where(true_labels==i)[0]\n",
+    "        pred_values_for_class = pred_labels[index_of_class]\n",
+    "        unique, counts = np.unique(pred_values_for_class,return_counts=True)\n",
+    "        count_dict = dict(zip(unique,counts))\n",
+    "        for key in count_dict.keys():\n",
+    "            confusion_matrix[i][key] = count_dict[key]\n",
+    "    return confusion_matrix"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -415,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +470,7 @@
        "1.0"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -480,6 +499,27 @@
    ],
    "source": [
     "plot_decision_boundary(clf,X,Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[50,  0],\n",
+       "       [ 0, 50]])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_confusion_matrix(Y,pred)"
    ]
   },
   {
@@ -567,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,15 +616,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.8 ms, sys: 3.31 ms, total: 10.1 ms\n",
-      "Wall time: 6.21 ms\n"
+      "CPU times: user 7.1 ms, sys: 3.96 ms, total: 11.1 ms\n",
+      "Wall time: 7.66 ms\n"
      ]
     }
    ],
@@ -595,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +644,7 @@
        "1.0"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +655,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[34,  0,  0],\n",
+       "       [ 0, 33,  0],\n",
+       "       [ 0,  0, 33]])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_confusion_matrix(Y,pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +686,7 @@
        "Text(0,0.5,'Feature2')"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1206,23 +1268,6 @@
     "            X[class_number*sample_per_class + i] = read_image(data_location+name+\"/\"+image_name)\n",
     "            Y[class_number*sample_per_class + i] = class_number\n",
     "    return X,Y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def read_test_set(test_set_location):\n",
-    "#     class_names = listdir(test_set_location)\n",
-    "#     X = np.empty([300*len(class_names),1024])\n",
-    "#     Y = np.empty([300*len(class_names),])\n",
-    "#     for class_number,name in enumerate(class_names):\n",
-    "#         for i,image_name in enumerate(listdir(test_set_location+name)):\n",
-    "#             X[class_number*300 + i] = read_image(test_set_location+name+\"/\"+image_name)\n",
-    "#             Y[class_number*300 + i] = class_number\n",
-    "#     return X,Y"
    ]
   },
   {
