confusion matrix plot done

--- a/Assignment 2/Assignment_2.ipynb
+++ b/Assignment 2/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "from pprint import pprint\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score,confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score\n",
     "from os import listdir\n",
     "import itertools\n",
     "from PIL import Image\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,6 +423,32 @@
     "        for key in count_dict.keys():\n",
     "            confusion_matrix[i][key] = count_dict[key]\n",
     "    return confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix(cm,title='Confusion matrix',cmap=plt.cm.Blues):\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_marks = np.arange(cm.shape[0])\n",
+    "    plt.xticks(tick_marks, range(cm.shape[0]))\n",
+    "    plt.yticks(tick_marks, range(cm.shape[0]))\n",
+    "\n",
+    "    fmt = 'd'\n",
+    "    thresh = cm.max() / 2.\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j, i, format(cm[i, j], fmt),\n",
+    "                 horizontalalignment=\"center\",\n",
+    "                 color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.xlabel('Predicted label')\n",
+    "    plt.tight_layout()"
    ]
   },
   {
@@ -503,23 +529,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[50,  0],\n",
-       "       [ 0, 50]])"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "create_confusion_matrix(Y,pred)"
+    "cm = create_confusion_matrix(Y,pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_confusion_matrix()"
    ]
   },
   {
