multi roc curve done]

--- a/Assignment 2/Assignment_2.ipynb
+++ b/Assignment 2/Assignment_2.ipynb
@@ -365,7 +365,7 @@
    "outputs": [],
    "source": [
     "def fit_binary_classifier(x,y,kernel):\n",
-    "    clf = SVC(kernel=kernel)\n",
+    "    clf = SVC(C=10.kernel=kernel)\n",
     "    clf.fit(x,y)\n",
     "    return clf"
    ]
