--- a/Assignment 2/Assignment_2.ipynb
+++ b/Assignment 2/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "from PIL import Image\n",
     "from sklearn.model_selection import KFold\n",
     "from scipy import interp\n",
+    "from sklearn.manifold import TSNE\n",
     "from itertools import cycle\n",
     "%matplotlib inline "
    ]
@@ -524,56 +525,6 @@
     "    else:\n",
     "        plt.title('Receiver operating characteristic for hindi dataset')\n",
     "    plt.legend(loc=\"lower right\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def plot_support_vectors(clf,X_train,Y_train,X_test,Y_test):\n",
-    "\n",
-    "#     w = clf.coef_[0]\n",
-    "#     a = -w[0] / w[1]\n",
-    "#     xx = np.linspace(-5, 5)\n",
-    "#     yy = a * xx - (clf.intercept_[0]) / w[1]\n",
-    "\n",
-    "#     margin = 1 / np.sqrt(np.sum(clf.coef_ ** 2))\n",
-    "#     yy_down = yy - np.sqrt(1 + a ** 2) * margin\n",
-    "#     yy_up = yy + np.sqrt(1 + a ** 2) * margin\n",
-    "\n",
-    "\n",
-    "#     plt.figure()\n",
-    "#     plt.clf()\n",
-    "#     plt.plot(xx, yy, 'k-')\n",
-    "#     plt.plot(xx, yy_down, 'k--')\n",
-    "#     plt.plot(xx, yy_up, 'k--')\n",
-    "\n",
-    "    \n",
-    "#     plt.scatter(X_train[clf.support_][:, 0], X_train[clf.support_][:, 1], s=80,facecolors='none', zorder=10, edgecolors='k')\n",
-    "#     plt.scatter(X_train[:, 0], X_train[:, 1], c=Y_train, zorder=10, cmap=plt.cm.Paired,edgecolors='k')\n",
-    "#     plt.scatter(X_test[:, 0], X_test[:, 1], c=Y_test,marker=\"^\", zorder=10, cmap=plt.cm.Paired,edgecolors='k')\n",
-    "\n",
-    "#     plt.axis('tight')\n",
-    "#     x_min = -4.8\n",
-    "#     x_max = 4.2\n",
-    "#     y_min = -6\n",
-    "#     y_max = 6\n",
-    "\n",
-    "#     XX, YY = np.mgrid[x_min:x_max:200j, y_min:y_max:200j]\n",
-    "#     Z = clf.predict(np.c_[XX.ravel(), YY.ravel()])\n",
-    "\n",
-    "#     Z = Z.reshape(XX.shape)\n",
-    "#     plt.figure(fignum, figsize=(4, 3))\n",
-    "#     plt.pcolormesh(XX, YY, Z, cmap=plt.cm.Paired)\n",
-    "\n",
-    "#     plt.xlim(x_min, x_max)\n",
-    "#     plt.ylim(y_min, y_max)\n",
-    "\n",
-    "#     plt.xticks(())\n",
-    "#     plt.yticks(())\n",
-    "    "
    ]
   },
   {
@@ -1692,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1715,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,7 +1686,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_support_vectors_high_dimension(clf,X_train,Y_train,X_test,Y_test):\n",
+    "    plt.figure()\n",
+    "    \n",
+    "    X_train = TSNE(n_components=2).fit_transform(X_train)\n",
+    "    X_test = TSNE(n_components=2).fit_transform(X_test)\n",
+    "    \n",
+    "    \n",
+    "    plt.scatter(X_train[:, 0], X_train[:, 1], c=Y_train,s=30, cmap=plt.cm.Paired)\n",
+    "    plt.scatter(X_test[:, 0], X_test[:, 1], c=Y_test, s=30, marker=\"^\",edgecolors='r',cmap=plt.cm.Paired)\n",
+    "    \n",
+    "    ax = plt.gca()\n",
+    "#     xlim = ax.get_xlim()\n",
+    "#     ylim = ax.get_ylim()\n",
+    "#     # create grid to evaluate model\n",
+    "#     xx = np.linspace(xlim[0], xlim[1], 30)\n",
+    "#     yy = np.linspace(ylim[0], ylim[1], 30)\n",
+    "#     YY, XX = np.meshgrid(yy, xx)\n",
+    "#     xy = np.vstack([XX.ravel(), YY.ravel()]).T\n",
+    "# #     Z = clf.decision_function(xy).reshape(XX.shape)\n",
+    "#     Z = predict_own(clf,X_train,xy,return_distance = True).reshape(XX.shape)\n",
+    "#     # plot decision boundary and margins\n",
+    "#     ax.contour(XX, YY, Z, colors='k', levels=[-1, 0, 1], alpha=0.5,linestyles=['--', '-', '--'])\n",
+    "#     # plot support vectors\n",
+    "#     ax.scatter(clf.support_vectors_[:, 0], clf.support_vectors_[:, 1], s=100,linewidth=1, facecolors='none')\n",
+    "#     ax.scatter(clf.support_vectors_[:, 0], clf.support_vectors_[:, 1], s=100,linewidth=1, facecolors='none')\n",
+    "    ax.scatter(X_train[clf.support_][:, 0], X_train[clf.support_][:, 1], s=80,marker=\"x\",edgecolors='k')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1744,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1762,7 +1747,7 @@
        "((8500, 1024), (8500,), (1500, 1024), (1500,))"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1908,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1920,7 +1905,7 @@
        "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1931,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1940,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1983,6 +1968,15 @@
     "print(f\"F1 score of each class {f1_score(Y_test,pred,average=None)}\")\n",
     "plot_confusion_matrix(create_confusion_matrix(Y_test,pred),title=\"Confusion matrix for hindi dataset\")\n",
     "plot_ROC_for_multiclass_problem(clf,Y_test,X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_support_vectors_high_dimension(clf,X_train,Y_train,X_test,Y_test)"
    ]
   },
   {
