weights init done

--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "((14251, 28, 28), (14251,))"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "array([7, 9], dtype=uint8)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,18 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_classes = len(np.unique(Y))\n",
-    "targets = Y.re\n",
-    "np.unique(Y_train)"
+    "targets = Y.reshape(-1)\n",
+    "Y = np.eye(n_classes)[targets]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((11400, 784), (2851, 784), (11400,), (2851,))"
+       "((11400, 784), (2851, 784), (11400, 2), (2851, 2))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,81 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([7, 9], dtype=uint8)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 0, ..., 0, 1, 1])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Y_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "#hyperparameters\n",
-    "epocs = 10\n",
+    "epoch = 10\n",
     "learning_rate = 0.01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +158,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def init_weights(n_hidden_layers, number_of_neurons):\n",
+    "    weights_layers =[np.random.uniform(size=(X_train.shape(1),number_of_neurons[0]))]\n",
+    "    bais_layers = [np.random.uniform(1,number_of_neurons[0])]\n",
+    "    \n",
+    "    for i in range(1,n_hidden_layers):\n",
+    "        weights_layers.append(np.random.uniform(size=(weights_layers[i-1].shape[1],number_of_neurons[i])))\n",
+    "        bais_layers.append(np.random.uniform(size=(1,number_of_neurons[i])))\n",
+    "    \n",
+    "    weights_layers.append(np.random.uniform(size=(weights_layers[-1].shape[1],number_of_class)))"
+   ]
   }
  ],
  "metadata": {
