layer init done

--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -155,20 +155,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "def init_weights(n_hidden_layers, number_of_neurons):\n",
-    "    weights_layers =[np.random.uniform(size=(X_train.shape(1),number_of_neurons[0]))]\n",
-    "    bais_layers = [np.random.uniform(1,number_of_neurons[0])]\n",
+    "    weights_layers =[np.random.uniform(size=(X_train.shape[1],number_of_neurons[0]))]\n",
+    "    bais_layers = [np.random.uniform(size=(1,number_of_neurons[0]))]\n",
     "    \n",
     "    for i in range(1,n_hidden_layers):\n",
     "        weights_layers.append(np.random.uniform(size=(weights_layers[i-1].shape[1],number_of_neurons[i])))\n",
     "        bais_layers.append(np.random.uniform(size=(1,number_of_neurons[i])))\n",
     "    \n",
-    "    weights_layers.append(np.random.uniform(size=(weights_layers[-1].shape[1],number_of_class)))"
+    "    weights_layers.append(np.random.uniform(size=(weights_layers[-1].shape[1],number_of_class)))\n",
+    "    bais_layers.append(np.random.uniform(size=(1,number_of_class)))\n",
+    "    \n",
+    "    return weights_layers,bais_layers"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weight_layers,bais_layers = init_weights(2,[100,50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(weight_layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(784, 100) (1, 100)\n",
+      "(100, 50) (1, 50)\n",
+      "(50, 2) (1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,j in zip(weight_layers,bais_layers):\n",
+    "    print(i.shape,j.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
