--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -184,22 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(weight_layers)"
+    "def train_neural_network(X_train,Y_train,epoch,learning_rate):\n",
+    "    global weight_layers\n",
+    "    global bais_layers\n",
+    "    layer_outputs = []\n",
+    "    last_layer_output = X_train\n",
+    "    \n",
+    "    for i in \n",
+    "    "
    ]
   },
   {
