--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "((14251, 28, 28), (14251,))"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "array([7, 9], dtype=uint8)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,18 +92,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_classes = len(np.unique(Y))\n",
-    "targets = Y.reshape(-1)\n",
-    "Y = np.eye(n_classes)[targets]"
+    "def one_hot_encoding(Y):\n",
+    "    n_classes = len(np.unique(Y))\n",
+    "    targets = Y.reshape(-1)\n",
+    "    return np.eye(n_classes)[targets],n_classes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y,n_classes = one_hot_encoding(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +131,7 @@
        "((11400, 784), (2851, 784), (11400, 2), (2851, 2))"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,15 +177,15 @@
     "        weights_layers.append(np.random.uniform(size=(weights_layers[i-1].shape[1],number_of_neurons[i])))\n",
     "        bais_layers.append(np.random.uniform(size=(1,number_of_neurons[i])))\n",
     "    \n",
-    "    weights_layers.append(np.random.uniform(size=(weights_layers[-1].shape[1],number_of_class)))\n",
-    "    bais_layers.append(np.random.uniform(size=(1,number_of_class)))\n",
+    "    weights_layers.append(np.random.uniform(size=(weights_layers[-1].shape[1],n_classes)))\n",
+    "    bais_layers.append(np.random.uniform(size=(1,n_classes)))\n",
     "    \n",
     "    return weights_layers,bais_layers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,23 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_neural_network(X_train,Y_train,epoch,learning_rate):\n",
-    "    global weight_layers\n",
-    "    global bais_layers\n",
-    "    layer_outputs = []\n",
-    "    last_layer_output = X_train\n",
-    "    \n",
-    "    for i in \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +217,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def train_neural_network(X_train,Y_train,epoch,learning_rate):\n",
+    "    global weight_layers\n",
+    "    global bais_layers\n",
+    "    layer_outputs = []\n",
+    "    last_layer_output = X_train\n",
+    "    \n",
+    "    for i in range(len(weight_layers)):\n",
+    "        layer_input = np.dot\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
