forward prop done

--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "((14251, 28, 28), (14251,))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "array([7, 9], dtype=uint8)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "((11400, 784), (2851, 784), (11400, 2), (2851, 2))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,36 +165,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(z,derative = False):\n",
+    "    if derative:\n",
+    "        return \n",
+    "    return np.exp(z)/np.sum(np.exp(z),axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_multiclass_loss(Y, Y_hat):\n",
+    "    L_sum = np.sum(np.multiply(Y, np.log(Y_hat)))\n",
+    "    m = Y.shape[1]\n",
+    "    return -(1/m) * L_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def init_weights(n_hidden_layers, number_of_neurons):\n",
     "    weights_layers =[np.random.uniform(size=(X_train.shape[1],number_of_neurons[0]))]\n",
-    "    bais_layers = [np.random.uniform(size=(1,number_of_neurons[0]))]\n",
+    "    bias_layers = [np.random.uniform(size=(1,number_of_neurons[0]))]\n",
     "    \n",
     "    for i in range(1,n_hidden_layers):\n",
     "        weights_layers.append(np.random.uniform(size=(weights_layers[i-1].shape[1],number_of_neurons[i])))\n",
-    "        bais_layers.append(np.random.uniform(size=(1,number_of_neurons[i])))\n",
+    "        bias_layers.append(np.random.uniform(size=(1,number_of_neurons[i])))\n",
     "    \n",
     "    weights_layers.append(np.random.uniform(size=(weights_layers[-1].shape[1],n_classes)))\n",
-    "    bais_layers.append(np.random.uniform(size=(1,n_classes)))\n",
+    "    bias_layers.append(np.random.uniform(size=(1,n_classes)))\n",
     "    \n",
-    "    return weights_layers,bais_layers"
+    "    return weights_layers,bias_layers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weight_layers,bais_layers = init_weights(2,[100,50])"
+    "weight_layers,bias_layers = init_weights(2,[100,50])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -208,8 +232,52 @@
     }
    ],
    "source": [
-    "for i,j in zip(weight_layers,bais_layers):\n",
+    "for i,j in zip(weight_layers,bias_layers):\n",
     "    print(i.shape,j.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_neural_network(X_train,Y_train,epoch,learning_rate):\n",
+    "    global weight_layers\n",
+    "    global bias_layers\n",
+    "    \n",
+    "    cost=[]\n",
+    "    \n",
+    "    #------epoch start here----------\n",
+    "    \n",
+    "    layer_outputs = []\n",
+    "    last_layer_output = X_train\n",
+    "    \n",
+    "    \n",
+    "    for weight,bias in zip(weight_layers[:-1],bais_layers[:-1]):\n",
+    "        layer_outputs.append(sigmoid(np.dot(last_layer_output,weight)+bias))\n",
+    "        last_layer_output=layer_outputs[-1]\n",
+    "\n",
+    "    layer_outputs.append(softmax(np.dot(last_layer_output,weight_layers[-1])+bias_layers[-1]))\n",
+    "    cost.append(compute_multiclass_loss(Y_train,layer_outputs[-1]))\n",
+    "    print(cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[53245.80121598119]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_neural_network(X_train,Y_train,epoch,learning_rate)"
    ]
   },
   {
@@ -217,17 +285,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def train_neural_network(X_train,Y_train,epoch,learning_rate):\n",
-    "    global weight_layers\n",
-    "    global bais_layers\n",
-    "    layer_outputs = []\n",
-    "    last_layer_output = X_train\n",
-    "    \n",
-    "    for i in range(len(weight_layers)):\n",
-    "        layer_input = np.dot\n",
-    "    "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
